// Copyright (c) Microsoft Corporation.
// Licensed under the MIT license.
syntax = "proto3";

package akssecuretlsbootstrap.v1;

// comes from dep: buf.build/service-hub/loggable
import "proto/log.proto";

option go_package = "github.com/Azure/aks-secure-tls-bootstrap/service/pkg/gen/akssecuretlsbootstrap/v1;akssecuretlsbootstrapv1";

message GetCredentialRequest {
  // Resource ID of the bootstrapping VM.
  string resource_id = 1;

  // Nonce received from the GetNonce RPC.
  string nonce = 2;

  // Attested data blob retrieved from IMDS.
  string attested_data = 3 [(servicehub.fieldoptions.loggable) = false];

  // TLS CSR PEM, b64-encoded.
  string encoded_csr_pem = 4 [(servicehub.fieldoptions.loggable) = false];
}

message GetCredentialResponse {
  // Kubelet client certificate PEM, b64-encoded.
  string encoded_cert_pem = 1 [(servicehub.fieldoptions.loggable) = false];
}
